# ros_chatter

./: LICENSE  README
chatter_msgs/: CMakeLists.txt  package.xml
chatter_msgs/msg/: Chatter.msg
chatter_receiver/: CMakeLists.txt  package.xml
chatter_receiver/launch/: receiver.launch  receiver_rosbag.launch  sender_receiver.launch  sender_receiver_namespace.launch
chatter_receiver/src/: Receiver.cpp  Receiver.h  chatter_receiver_node.cpp
chatter_sender/: CMakeLists.txt  package.xml
chatter_sender/launch/: sender.launch
chatter_sender/src/: chatter_sender.cpp
chatter_sender/test/: CMakeLists.txt  chatter_sender_test.cpp  chatter_sender_test.launch
