<?xml version="1.0"?>
<package>
  <name>chatter_receiver</name>
  <version>1.0.0</version>
  <description>The chatter_receiver package</description>
  <maintainer email="lukas.bulwahn@oss.bmw-carit.de">Lukas Bulwahn</maintainer>
  <license>BSD</license>

  <author email="Daniel.Mohr@bmw-carit.de">Daniel Mohr</author>
  <author email="Felix.Sedlmeier@bmw-carit.de">Felix Sedlmeier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>catkin_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
