<?xml version="1.0"?>
<package>
  <name>chatter_sender</name>
  <version>1.1.0</version>
  <description>The chatter_sender package</description>
  <maintainer email="lukas.bulwahn@oss.bmw-carit.de">Lukas Bulwahn</maintainer>
  <license>BSD</license>

  <author email="Daniel.Mohr@bmw-carit.de">Daniel Mohr</author>
  <author email="Felix.Sedlmeier@bmw-carit.de">Felix Sedlmeier</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <build_depend>catkin_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>catkin_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export></export>
</package>
